syntax = "proto3";

package account.v1;

option go_package = "./;accountpb";

import "google/protobuf/timestamp.proto";

message User {
    string uuid = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    google.protobuf.Timestamp created_at = 6;
}

message Session {
    string refresh_token = 1;
    google.protobuf.Timestamp expire_at = 2;
}